[gd_scene load_steps=2 format=3 uid="uid://lxb8loxd4ubp"]

[ext_resource type="Script" path="res://login_menu.gd" id="1_ojd4d"]

[node name="login_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ojd4d")

[node name="Email" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 150.0
offset_right = 134.0
offset_bottom = 181.0
grow_horizontal = 2
placeholder_text = "Enter your Email"
virtual_keyboard_type = 5
clear_button_enabled = true
shortcut_keys_enabled = false

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.491
anchor_right = 0.491
offset_left = -127.632
offset_top = 198.0
offset_right = 144.368
offset_bottom = 229.0
placeholder_text = "Enter your Password"
secret = true
secret_character = "*"
virtual_keyboard_type = 6
clear_button_enabled = true
shortcut_keys_enabled = false

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_right = 0.497
offset_left = 25.456
offset_top = 318.0
offset_right = 137.456
offset_bottom = 349.0
text = "Login"

[node name="CreateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.478
anchor_right = 0.478
offset_left = -112.656
offset_top = 318.0
offset_right = -0.656006
offset_bottom = 349.0
text = "Create"

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 238.0
offset_right = 134.0
offset_bottom = 270.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1

[node name="LoginLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.003
anchor_right = 0.5
anchor_bottom = -0.003
offset_left = -138.0
offset_top = 63.944
offset_right = 134.0
offset_bottom = 89.944
text = "Login"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 278.0
offset_right = 134.0
offset_bottom = 309.0
grow_horizontal = 2
text = "Show Password"
alignment = 2

[node name="LastPressedKey" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.096
anchor_right = 0.109
anchor_bottom = 0.096
offset_left = 0.431992
offset_top = -0.208
offset_right = 48.432
offset_bottom = 39.792

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="text_changed" from="Email" to="." method="_on_email_text_changed"]
[connection signal="text_changed" from="Password" to="." method="_on_password_text_changed"]
[connection signal="button_down" from="LoginButton" to="." method="_on_login_button_down"]
[connection signal="button_down" from="CreateButton" to="." method="_on_create_button_down"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="gui_input" from="LastPressedKey" to="." method="_on_last_pressed_key_gui_input"]
